--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
 						<div class="header-photo"></div>
 					</div>
 					<div class="site-menu profile-card-on flex-v-align dl-menuwrapper" >
-						<div class="profile-card flex-v-align">
+						<div class="profile-card resume-profil flex-v-align">
 							<div class="profile-card-block">
 								<div class="profile-img">
 									<a href="index.html">
@@ -95,7 +95,7 @@
 								<!-- /Social Links -->
 							</div>
 						</div>
-						<ul id="menu-vcard-menu" class="wezen-classic-menu main-menu dl-menu dl-menuopen">
+						<ul id="menu-vcard-menu" class="menu-resume wezen-classic-menu main-menu dl-menu dl-menuopen">
 							<li id="menu-item-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home">
 								<a href="index.html" data-hover="1" >About Me</a>
 							</li>
