--- a/contact.html
+++ b/contact.html
@@ -104,6 +104,7 @@
         <script type="text/javascript" src="js/jquery/jquery.min9d52.js?ver=3.5.1" id="jquery-core-js"></script>
         <script type="text/javascript" src="js/jquery/jquery-migrate.mind617.js?ver=3.3.2" id="jquery-migrate-js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     </head>
     <body class="page-template-default page page-id-108 wp-embed-responsive masthead-fixed full-width singular elementor-default elementor-kit-163 elementor-page elementor-page-108">
         <div class="lm-animated-bg"></div>
@@ -131,17 +132,12 @@
                     <div class="site-menu profile-card-on flex-v-align dl-menuwrapper">
                         <div class="profile-card flex-v-align">
                             <div class="profile-card-block">
-                                <div class="profile-img">
-                                    <a href="index.html">
-                                        <img src="images/nazira-photo.png" alt="image" />
-                                    </a>
-                                </div>
                                 <a href="index.html">
                                     <h3 class="site-title" style="color: #5468e7;">Nazira Torebaeva</h3>
                                 </a>
                                 <h5 class="site-subtitle">Web Developer</h5>
                                 <!-- Social Links -->
-                                <div class="social-links">
+                                <div class="social-links" data-aos="fade-right">
                                     <ul>
                                         <li>
                                             <a href="https://t.me/TorebaevaN" target="_blank"> <i class="fafw fafw-telegram"></i> </a>
@@ -254,6 +250,7 @@
                                                                             data-id="20d201e"
                                                                             data-element_type="widget"
                                                                             data-widget_type="wezen-info-block.default"
+                                                                           
                                                                         >
                                                                             <div class="elementor-widget-container">
                                                                                 <div class="lm-info-block gray-default">
@@ -328,7 +325,7 @@
                                                                             data-element_type="widget"
                                                                             data-widget_type="wezen-info-block.default"
                                                                         >
-                                                                            <div class="elementor-widget-container">
+                                                                            <div class="elementor-widget-container" >
                                                                                 <a href="https://facebook.com/torebaeva.n" target="_blank">
                                                                                 <div class="lm-info-block gray-default">
                                                                                     <i class="fafw fafw-facebook-square"></i>
@@ -422,6 +419,12 @@
                 </div>
             </div>
         </div>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init({
+                duration: 2000
+            });
+        </script>
         <script type='text/javascript' src='js/modernizr.customf.js' id='modernizr-js'></script>
         <script type='text/javascript' src='js/bootstrap.min.js' id='bootstrap-js'></script>
         <script type='text/javascript' src='js/owl.carousel.min.js' id='owl-carousel-js'></script>
