--- a/resume.html
+++ b/resume.html
@@ -34,6 +34,7 @@
         <script type='text/javascript' src='js/jquery/jquery.min9d52.js?ver=3.5.1' id='jquery-core-js'></script>
         <script type='text/javascript' src='js/jquery/jquery-migrate.mind617.js?ver=3.3.2' id='jquery-migrate-js'></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     </head>
     <body class="page-template-default page page-id-59 wp-embed-responsive masthead-fixed full-width singular elementor-default elementor-kit-163 elementor-page elementor-page-59">
         <div class="lm-animated-bg"></div>
@@ -58,16 +59,14 @@
                     <div class="site-menu profile-card-on resume-profil flex-v-align dl-menuwrapper">
                         <div class="profile-card flex-v-align">
                             <div class="profile-card-block">
-                                <div class="profile-img">
-                                    <a href="index.html">
-                                        <img src="images/nazira-photo.png" alt="image">
-                                    </a>
-                                </div>
                                 <a href="index.html">
                                     <h3 class="site-title" style="color: #5468e7;">Nazira Torebaeva</h3>
                                 </a>
                                 <h5 class="site-subtitle">Web Developer</h5>
-                                <div class="social-links">
+                                <div 
+                                    class="social-links"  
+                                    data-aos="fade-right"
+                                    >
                                     <ul>
                                         <li>
                                             <a href="https://t.me/TorebaevaN" target="_blank"> <i class="fafw fafw-telegram"></i> </a>
@@ -101,7 +100,7 @@
                         </ul>
                     </div>
                 </header>
-                <div class="content-area single-page-area" data-animation="animated-section-rotateRoomBottomIn">
+                <div class="content-area single-page-area">
                     <div class="single-page-content">
                         <div class="content-wrapper">
                             <div class="page-title">
@@ -116,18 +115,16 @@
                                                     <div class="row">
                                                             <div class="elementor-widget-wrap">
                                                                 <div class="elementor-element elementor-element-21642d9 elementor-widget elementor-widget-wezen-timeline" data-id="21642d9" data-element_type="widget" data-widget_type="wezen-timeline.default">
-                                                                    <div class="card elementor-widget-container" style="box-shadow: 1px 1px 11px 0px #00000040; margin-bottom: 20px; padding: 10px 15px;">
+                                                                    <div data-aos="zoom-in"
+                                                                        data-aos-easing="ease-in-sine" 
+                                                                        class="card elementor-widget-container" 
+                                                                        style="box-shadow: 1px 1px 11px 0px #00000040; margin-bottom: 20px; padding: 10px 15px;">
                                                                         <div class="block-title element-title">
                                                                             <h2>Education</h2>
                                                                         </div>
                                                                         <div class="timeline clearfix">
                                                                             <div class="timeline-item clearfix">
-                                                                                <h5 class="item-period highlighted">2016-2019</h5>
-                                                                                <h6 class="item-title">Academic Lyceum under KSU</h6>
-                                                                                <span class="item-company">The exact sciences direction</span>
-                                                                            </div>
-                                                                            <div class="timeline-item clearfix">
-                                                                                <h5 class="item-period highlighted">2019-2023</h5>
+                                                                                <h5 class="item-period highlighted">2019-Present (Expected graduation 2023)</h5>
                                                                                 <h6 class="item-title">Tashkent University of Information Technologies named After Muhammad Al-Khwarizmi</h6>
                                                                                 <h4 class="item-company">Software Engineering Faculty</h4>
                                                                             </div>
@@ -135,7 +132,10 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="elementor-element elementor-element-ac42db5 elementor-widget elementor-widget-wezen-timeline" data-id="ac42db5" data-element_type="widget" data-widget_type="wezen-timeline.default">
-                                                                    <div class="card elementor-widget-container" style="box-shadow: 1px 1px 11px 0px #00000040; margin-bottom: 20px; padding: 10px 15px;">
+                                                                    <div
+                                                                        data-aos="fade-left" 
+                                                                        data-aos-easing="ease-in-sine" 
+                                                                        class="card elementor-widget-container" style="box-shadow: 1px 1px 11px 0px #00000040; margin-bottom: 20px; padding: 10px 15px;">
                                                                         <div class="block-title element-title">
                                                                             <h2>Experience</h2>
                                                                         </div>
@@ -149,8 +149,7 @@
                                                                                 <h5 class="item-period highlighted">December 2020 - Current</h5>
                                                                                 <span class="item-company">Elmakon</span>
                                                                                 <h4 class="item-title">Frontend Developer</h4>
-                                                                            </div
-                                                >
+                                                                            </div>
                                                                             <div class="timeline-item clearfix">
                                                                                 <h5 class="item-period highlighted">April 2020 - Current</h5>
                                                                                 <span class="item-company">Freelancer</span>
@@ -161,8 +160,10 @@
                                                                 </div>
                                                             </div>
                                                             <div class="elementor-widget-wrap">
-                                                                <div class="elementor-element elementor-element-bdaf6f1 elementor-widget elementor-widget-wezen-skills" data-id="bdaf6f1" data-element_type="widget" data-widget_type="wezen-skills.default">
-                                                                    <div class="card elementor-widget-container" style="box-shadow: 1px 1px 11px 0px #00000040; margin-bottom: 20px; padding: 10px 15px;">
+                                                                <div class="elementor-element elementor-element-bdaf6f1 elementor-widget elementor-widget-wezen-skills"  data-element_type="widget" data-widget_type="wezen-skills.default">
+                                                                    <div
+                                                                        class="card elementor-widget-container" 
+                                                                        style="box-shadow: 1px 1px 11px 0px #00000040; margin-bottom: 20px; padding: 10px 15px;">
                                                                         <div class="block-title element-title">
                                                                             <h2>Skills</h2>
                                                                         </div>
@@ -235,7 +236,8 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="elementor-element elementor-element-daa54fc elementor-widget elementor-widget-wezen-certificate" data-id="daa54fc" data-element_type="widget" data-widget_type="wezen-certificate.default">
-                                                                    <div class="card elementor-widget-container"  style="box-shadow: 1px 1px 11px 0px #00000040; margin-bottom: 20px; padding: 10px 15px;">
+                                                                    <div 
+                                                                        class="card elementor-widget-container"  style="box-shadow: 1px 1px 11px 0px #00000040; margin-bottom: 20px; padding: 10px 15px;">
                                                                         <div class="block-title" style="margin-bottom: 15px">
                                                                             <h2>Certificates</h2>
                                                                         </div>
@@ -260,7 +262,6 @@
                                                                                 </div>
                                                                             </div>
                                                                         </a>
-                                                                    
                                                                         <a href="#" class="lightbox">
                                                                             <div class="certificate-item clearfix">
                                                                                 <div class="certi-logo">
@@ -275,67 +276,6 @@
                                                                                     </div>
                                                                                     <div class="certi-date">
                                                                                         <span>August 2020</span>
-                                                                                    </div>
-                                                                                    <div class="certi-company">
-                                                                                        <span></span>
-                                                                                    </div>
-                                                                                </div>
-                                                                            </div>
-                                                                        </a>
-                                                                        <a href="#" class="lightbox">
-                                                                            <div class="certificate-item clearfix">
-                                                                                <div class="certi-logo">
-                                                                                    <img src="images/photo_2020-12-13_14-46-54.jpg" alt="logo">
-                                                                                </div>
-                                                                                <div class="certi-content">
-                                                                                    <div class="certi-title">
-                                                                                        <h4>One Million Uzbek Coders</h4>
-                                                                                    </div>
-                                                                                    <div class="certi-id">
-                                                                                        <span>Has successfully completed in Full Stack Development Track</span>
-                                                                                    </div>
-                                                                                    <div class="certi-date">
-                                                                                        <span>September 2020</span>
-                                                                                    </div>
-                                                                                    <div class="certi-company">
-                                                                                        <span></span>
-                                                                                    </div>
-                                                                                </div>
-                                                                            </div>
-                                                                        </a>
-                                                                        <a href="#" class="lightbox">
-                                                                            <div class="certificate-item clearfix">
-                                                                                <div class="certi-logo">
-                                                                                    <img src="images/photo_2020-12-13_14-45-56.jpg" alt="logo" style="transform: rotate(270deg);">
-                                                                                </div>
-                                                                                <div class="certi-content">
-                                                                                    <div class="certi-title">
-                                                                                        <h4>Zakovat</h4>
-                                                                                    </div>
-                                                                                    <div class="certi-id">
-                                                                                    </div>
-                                                                                    <div class="certi-date">
-                                                                                        <span>10 October 2019</span>
-                                                                                    </div>
-                                                                                    <div class="certi-company">
-                                                                                        <span></span>
-                                                                                    </div>
-                                                                                </div>
-                                                                            </div>
-                                                                        </a>
-                                                                        <a href="#" class="lightbox">
-                                                                            <div class="certificate-item clearfix">
-                                                                                <div class="certi-logo">
-                                                                                    <img src="images/photo_2020-12-13_14-46-13.jpg" alt="logo" style="transform: rotate(270deg);">
-                                                                                </div>
-                                                                                <div class="certi-content">
-                                                                                    <div class="certi-title">
-                                                                                        <h4>Zakovat</h4>
-                                                                                    </div>
-                                                                                    <div class="certi-id">
-                                                                                    </div>
-                                                                                    <div class="certi-date">
-                                                                                        <span>September 2019</span>
                                                                                     </div>
                                                                                     <div class="certi-company">
                                                                                         <span></span>
@@ -379,7 +319,12 @@
                 </div>
             </div>
         </div>
-        
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init({
+                duration: 1200,
+            });
+          </script>
       <script type='text/javascript' src='js/modernizr.customf.js' id='modernizr-js'></script>
       <script type='text/javascript' src='js/bootstrap.min.js' id='bootstrap-js'></script>
       <script type='text/javascript' src='js/owl.carousel.min.js' id='owl-carousel-js'></script>
